--- a/result/package.json
+++ b/result/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "angular-chart.js": "^1.1.1",
     "async": "^3.1.0",
+    "chart.js": "^4.4.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
