--- a/k8s-specifications/vote-deployment.yaml
+++ b/k8s-specifications/vote-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: vote
     spec:
       containers:
-      - image: brianmorel99/bjmvotingapp_vote
+      - image: brianmorel99/bjmvotingapp_vote:latest
         name: vote
         ports:
         - containerPort: 80
