kubernetes image pulling updates.

--- a/k8s-specifications/result-deployment.yaml
+++ b/k8s-specifications/result-deployment.yaml
@@ -16,6 +16,7 @@ spec:
     spec:
       containers:
       - image: brianmorel99/bjmvotingapp_result:latest
+        imagePullPolicy: Always
         name: result
         ports:
         - containerPort: 80
