--- a/k8s-specifications/vote-deployment.yaml
+++ b/k8s-specifications/vote-deployment.yaml
@@ -16,6 +16,7 @@ spec:
     spec:
       containers:
       - image: brianmorel99/bjmvotingapp_vote:latest
+        imagePullPolicy: Always
         name: vote
         ports:
         - containerPort: 80
